Completed index.html adding animations, centering elements, rewrote syntax for header section background image. Also started about.html page. Will add media queries to all pages at the end.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Infinite Therapist</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -8,23 +9,27 @@
 		
 	</head>
 	<body>
+		<!-- Nav Bar Section -->
 		<nav>
-				<!-- Need To get logo -->
-			<a href=""><img class="animated fadeInLeft"src="img/it-logo.png"></a>
+			<a href=""><img class="logo animated fadeIn" src="img/it-logo.png"></a>
 			<ul class="animated fadeIn">
-				<li><a href="">HOME</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="#">HOME</a></li>
+				<li><a href="pages/about.html">ABOUT</a></li>
 				<li><a href="">SERVICES</a></li>
 				<li><a href="">NEW GRADUATE PROGRAM</a></li>
 				<li><a href="">CONTACT US</a></li>
 			</ul>
 		</nav>
-		<header class="animated fadeIn">
-			<h1>Infinite Therapist</h1>
-			<h3>Creating continuity that meets employer's and therapist's needs.</h3>
-			<div>
-				<button class="left-button">Need Staff?</button>
-				<button class="right-button">Need a Career?</button>
+
+		<!-- Header Section -->
+		<header>
+			<div class="overlay">
+				<h1 class="head">Infinite Therapist</h1>
+				<h3>Creating continuity that meets employer's and therapist's needs.</h3>
+				<div>
+					<button class="leftButton">Need Staff?</button>
+					<button class="rightButton">Need a Career?</button>
+				</div>
 			</div>	
 		</header>
 
@@ -33,11 +38,11 @@
 			<div class="wrapper">
 				<div class="info">
 					<img src="img/group-icon.png">
-						<div class="subInfoA">
+						<div>
 							<h3>
 								Personalize Service
 							</h3>
-							<h4>
+							<h4 class="subInfoA">
 								Providing personalized service to each healthcare facility by exploring your needs and the culture of your team.
 							</h4>
 						</div>	
@@ -45,22 +50,22 @@
 							
 					<div class="info">
 						<img src="img/time-icon.png">
-						<div class="subInfoB">
+						<div>
 							<h3>
 								Uninterrupted Care
 							</h3> 
-							<h4>
+							<h4 class="subInfoB">
 								Working tirelessly filling vacancies to keep facilities staffed and maintain uninterrupted care for patients.
 							</h4>
 						</div>
 					</div>
 					<div class="info">
 						<img src="img/floating-guru-icon.png">
-						<div class="subInfoC">
+						<div>
 							<h3>
 								Obtain Balanced Goals
 							</h3> 
-							<h4>
+							<h4 class="subInfoC">
 								Partnership with therapists to help them obtain their career goals and support them with work life balance!
 							</h4>
 						</div>
@@ -71,7 +76,7 @@
 		<!-- Contact Section -->
 		<section class="contact">
 			<div class="wrapper">
-				<div>
+				<div class="mailImage">
 					<img src="img/post-office-icon.png">
 				</div>
 				<div class="contactText">
@@ -90,7 +95,7 @@
 		<footer>
 				
 				<a href=""><img src="img/it-logo.png"></a>
-				<h5 class="copy">Copyright © 2017 by infinite Therapist. All rights reserved.</h5>
+				<h5 class="copy">Copyright © 2017 by Infinite Therapist. All rights reserved.</h5>
 
 				<div class="ref">
 					<h5>
