Added animation to the, More Details Section image and buttons.

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Infinite Therapist</title>
+		<title>ABOUT-Infinite Therapist</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../css/animate.css">
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -27,47 +27,60 @@
 			<img src="../img/nurse-group.png" alt="Group of nurses smiling">
 		</div>
 
+		<!-- About Section -->
 		<section class="about">
-			<h1>About Infinite Therapist</h1>
-			<hr>
-			<div class="aboutText">
-				<h5>Who We Are</h5>
-				<p>We are a therapist owned and operated recruiting and staffing company based out of Atlanta, Georgia. Infinite Therapist was founded by Kelsey Thornton MS, OT/L. As a practicing therapist who has held many travel therapy positions throughout the United States, she consistently saw the need for quality therapist in many locations. She also encountered the frustrations many facilities faced when needing to fill vacant therapy positions quickly. Out of this need grew the Infinite Therapist concept:</p>
-			</div>
+			<div class="wrap">
+				<h1 class="animated fadeInRight">About Infinite Therapist</h1>
+				<hr>
+				<div class="aboutTextWrap">
+					<div class="aboutText">
+						<h3>Who We Are</h3>
+						<p>We are a therapist owned and operated recruiting and staffing company based out of Atlanta, Georgia. Infinite Therapist was founded by Kelsey Thornton MS, OT/L. As a practicing therapist who has held many travel therapy positions throughout the United States, she consistently saw the need for quality therapist in many locations. She also encountered the frustrations many facilities faced when needing to fill vacant therapy positions quickly. Out of this need grew the Infinite Therapist concept:</p>
+					</div>
 
-			<div class="quote">
-				<p>Always provide quality and professional continuity of service for therapist and healthcare facilities so their patients receive uninterrupted care.
-				</p>
-			</div>
+					<div class="quote">
+						<em><strong><p><q>Always provide quality and professional continuity of service for therapist and healthcare facilities so their patients receive uninterrupted care.
+						</q></p></strong>
+						</em>
+					</div>
 
-			<div class="aboutText">
-				<h5>What We Do</h5>
-				<p>At Infinite Therapist we specialize in meeting the needs of our therapist and clients by providing contract, contract to hire, direct hire job placement and staffing solutions on a global scale. As a therapist owned and operated company we understand and know how to support the unique balance between the needs of healthcare facilities and the career interest of our therapist.</p>
-			</div>
+					<div class="aboutText">
+						<h3>What We Do</h3>
+						<p>At Infinite Therapist we specialize in meeting the needs of our therapist and clients by providing contract, contract to hire, direct hire job placement and staffing solutions on a global scale. As a therapist owned and operated company we understand and know how to support the unique balance between the needs of healthcare facilities and the career interest of our therapist.</p>
+					</div>
 
-			<div>
-				<h5>Why Infinite Therapist</h5>
-				<ul>
-					<li>We have competitive rates.</li>
-					<li>Our therapists are qualified and have the skills and expertise you would expect of your own staff.</li>
-					<li>We provide personalized service to each healthcare facility, giving us a greater opportunity to explore your needs and the culture of your facility.</li>
-					<li>We work one on one with every therapist to customize therapy placements for a perfect work/life balance.</li>
-					<li>Whether you are in need of a temporary staffing solution or looking to grow your healthcare facilities/programs we solely focus on therapy staffing, so we can assure you we have the best therapist in the industry.</li>
-					<li>We are a therapist owned company giving us the advantage of understanding the therapy job market.</li>
-				</ul>
-			</div>
-			<div class="quote">
-				<p>One of the deep secrets of life is that all that is really worth doing is what we do for others.</p>
-				<h5>-Lewis Carol</h5>
-			</div>
+					<div class="aboutText">
+						<h3>Why Infinite Therapist</h3>
+						<ul>
+							<li>We have competitive rates.</li>
+							<li>Our therapists are qualified and have the skills and expertise you would expect of your own staff.</li>
+							<li>We provide personalized service to each healthcare facility, giving us a greater opportunity to explore your needs and the culture of your facility.</li>
+							<li>We work one on one with every therapist to customize therapy placements for a perfect work/life balance.</li>
+							<li>Whether you are in need of a temporary staffing solution or looking to grow your healthcare facilities/programs we solely focus on therapy staffing, so we can assure you we have the best therapist in the industry.</li>
+							<li>We are a therapist owned company giving us the advantage of understanding the therapy job market.</li>
+						</ul>
+					</div>
+					<div class="quote">
+						<em><strong><p><q>One of the deep secrets of life is that all that is really worth doing is what we do for others.</q></p>
+						<h5>-Lewis Carol</h5></strong><em>
+					</div>
+				</div>
+			</div>	
 		</section>
+
+		<!-- More Details Section-->
 		<section class="moreDetails">
-			<div class="wrapper">
-				<img src="../img/hand-planting-icon.png" alt="Hand with plant growing from palm">
+			<img class="handImage" src="../img/hand-planting-icon.png" alt="Hand with plant growing from palm">
+			<div class="moreDetailText">
 				<h2>Want More Details?</h2>
 				<h3>Click your interest to see what services we have to offer.</h3>
-			</div>
+			</div>	
+			<button class="detailBtn">Staffing</button>
+			<button class="detailBtn">Career</button>
 		</section>
 
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="../js/jquery.waypoints.min.js"></script>
+		<script src="../js/about-animations.js"></script>
 	</body>
 </html>
