ABOUT Page Complete with animation, css, and html. Will need to come back and add links to anchors and create media queries for mobile use.

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
 		</nav>
 
 		<!-- Three pictures as header. -->
-		<div class="imgRow">
+		<div class="imgRow animated fadeInDown">
 			<img src="../img/business-people.jpg" alt="Business People">
 			<img src="../img/nures-elder-man-stand.png" alt="Nurse helping elder man stand">
 			<img src="../img/nurse-group.png" alt="Group of nurses smiling">
@@ -38,7 +38,7 @@
 						<p>We are a therapist owned and operated recruiting and staffing company based out of Atlanta, Georgia. Infinite Therapist was founded by Kelsey Thornton MS, OT/L. As a practicing therapist who has held many travel therapy positions throughout the United States, she consistently saw the need for quality therapist in many locations. She also encountered the frustrations many facilities faced when needing to fill vacant therapy positions quickly. Out of this need grew the Infinite Therapist concept:</p>
 					</div>
 
-					<div class="quote">
+					<div class="quoteTop">
 						<em><strong><p><q>Always provide quality and professional continuity of service for therapist and healthcare facilities so their patients receive uninterrupted care.
 						</q></p></strong>
 						</em>
@@ -60,7 +60,7 @@
 							<li>We are a therapist owned company giving us the advantage of understanding the therapy job market.</li>
 						</ul>
 					</div>
-					<div class="quote">
+					<div class="quoteBottom">
 						<em><strong><p><q>One of the deep secrets of life is that all that is really worth doing is what we do for others.</q></p>
 						<h5>-Lewis Carol</h5></strong><em>
 					</div>
@@ -75,9 +75,24 @@
 				<h2>Want More Details?</h2>
 				<h3>Click your interest to see what services we have to offer.</h3>
 			</div>	
-			<button class="detailBtn">Staffing</button>
-			<button class="detailBtn">Career</button>
+			<div class="btn">
+				<button class="detailBtn left">Staffing</button>
+				<button class="detailBtn right">Career</button>
+			</div>		
 		</section>
+		<footer>
+				<a href=""><img src="../img/it-logo.png"></a>
+				<h5 class="copy">Copyright © 2017 by Infinite Therapist. All rights reserved.</h5>
+
+				<div class="ref">
+					<h5>
+						Built By:
+					</h5> 
+					<a href="">
+						iThr&imacr;vWeb
+					</a>
+				</div>
+		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="../js/jquery.waypoints.min.js"></script>
