Completed Services.html page with animation. I have to connect all the links and mobile optimize with media queries.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<ul class="animated fadeIn">
 				<li><a href="#">HOME</a></li>
 				<li><a href="pages/about.html">ABOUT</a></li>
-				<li><a href="">SERVICES</a></li>
+				<li><a href="pages/services.html">SERVICES</a></li>
 				<li><a href="">NEW GRADUATE PROGRAM</a></li>
 				<li><a href="">CONTACT US</a></li>
 			</ul>
@@ -73,7 +73,6 @@
 				</div>
 			</div>
 		</section>
-		
 		<!-- Contact Section -->
 		<section class="contact">
 			<div class="wrapper">
