--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
 			<ul class="animated fadeIn">
 				<li><a href="../index.html">HOME</a></li>
 				<li><a href="#">ABOUT</a></li>
-				<li><a href="">SERVICES</a></li>
+				<li><a href="./services.html">SERVICES</a></li>
 				<li><a href="">NEW GRADUATE PROGRAM</a></li>
 				<li><a href="">CONTACT US</a></li>
 			</ul>
