--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
 				<li><a href="../index.html">HOME</a></li>
 				<li><a href="#">ABOUT</a></li>
 				<li><a href="./services.html">SERVICES</a></li>
-				<li><a href="">NEW GRADUATE PROGRAM</a></li>
+				<li><a href="./graduate.html">NEW GRADUATE PROGRAM</a></li>
 				<li><a href="">CONTACT US</a></li>
 			</ul>
 		</nav>
