--- a/pages/services.html
+++ b/pages/services.html
@@ -17,7 +17,7 @@
 				<li><a href="../index.html">HOME</a></li>
 				<li><a href="./about.html">ABOUT</a></li>
 				<li><a href="#">SERVICES</a></li>
-				<li><a href="pages/newgrad.html">NEW GRADUATE PROGRAM</a></li>
+				<li><a href="./graduate.html">NEW GRADUATE PROGRAM</a></li>
 				<li><a href="">CONTACT US</a></li>
 			</ul>
 		</nav>
