connected all of the links on each page, turned buttons elements into <a> elements, reconfigured js animations, and began mobile optimizing the home page with media queries .

--- a/pages/about.html
+++ b/pages/about.html
@@ -12,11 +12,29 @@
 		<nav>
 			<a href="../index.html"><img class="logo animated fadeIn" src="../img/it-logo.png"></a>
 			<ul class="animated fadeIn">
-				<li><a href="../index.html">HOME</a></li>
-				<li><a href="#">ABOUT</a></li>
-				<li><a href="./services.html">SERVICES</a></li>
-				<li><a href="./graduate.html">NEW GRADUATE PROGRAM</a></li>
-				<li><a href="">CONTACT US</a></li>
+				<li>
+					<a href="../index.html">HOME</a>
+				</li>
+				<li>
+					<a href="#">ABOUT</a>
+				</li>
+				<li class="dropdown">
+    				<a href="./services.html">SERVICES</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="./staffing.html">STAFFING</a>
+				      <a href="./career.html">CAREER</a>
+				    </div>
+				</li>  
+				<li>
+					<a href="./graduate.html">NEW GRADUATE PROGRAM</a>
+				</li>
+				<li class="dropdown">
+    				<a href="./contact.html">CONTACT US</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="./staffing-contact.html">STAFFING CONTACT</a>
+				      <a href="./career-contact.html">CAREER CONTACT</a>
+				    </div>
+				</li>  
 			</ul>
 		</nav>
 
@@ -51,7 +69,7 @@
 
 					<div class="aboutText">
 						<h3>Why Infinite Therapist</h3>
-						<ul>
+						<ul class="list">
 							<li>We have competitive rates.</li>
 							<li>Our therapists are qualified and have the skills and expertise you would expect of your own staff.</li>
 							<li>We provide personalized service to each healthcare facility, giving us a greater opportunity to explore your needs and the culture of your facility.</li>
@@ -76,8 +94,8 @@
 				<h3>Click your interest to see what services we have to offer.</h3>
 			</div>	
 			<div class="btn">
-				<button class="detailBtn left">Staffing</button>
-				<button class="detailBtn right">Career</button>
+				<a href="./staffing.html" class="detailBtn left">Staffing</a>
+				<a href="./career.html" class="detailBtn right">Career</a>
 			</div>		
 		</section>
 		<footer>
