--- a/pages/graduate.html
+++ b/pages/graduate.html
@@ -14,11 +14,29 @@
 		<nav>
 			<a href="../index.html"><img class="logo animated fadeIn" src="../img/it-logo.png"></a>
 			<ul class="animated fadeIn">
-				<li><a href="../index.html">HOME</a></li>
-				<li><a href="./about.html">ABOUT</a></li>
-				<li><a href="./services.html">SERVICES</a></li>
-				<li><a href="#">NEW GRADUATE PROGRAM</a></li>
-				<li><a href="">CONTACT US</a></li>
+				<li>
+					<a href="../index.html">HOME</a>
+				</li>
+				<li>
+					<a href="./about.html">ABOUT</a>
+				</li>
+				<li class="dropdown">
+    				<a href="./services.html">SERVICES</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="./staffing.html">STAFFING</a>
+				      <a href="./career.html">CAREER</a>
+				    </div>
+				</li>  
+				<li>
+					<a href="#">NEW GRADUATE PROGRAM</a>
+				</li>
+				<li class="dropdown">
+    				<a href="./contact.html">CONTACT US</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="./staffing-contact.html">STAFFING CONTACT</a>
+				      <a href="./career-contact.html">CAREER CONTACT</a>
+				    </div>
+				</li>  
 			</ul>
 		</nav>
 
@@ -105,7 +123,7 @@
 				<h2>Have questions? Ready to get started?</h2>
 				<h3>Schedule a consultation to speak with a therapy recruitment consultant who is eager to learn more about you and your career interest. It is our pleasure to assist you with your job/career placement for today and in the future.</h3>
 			</div>	
-			<button class="detailBtn">Get Started</button>
+			<a href="./career-contact.html" class="detailBtn">Get Started</a>
 					
 		</section>
 		<footer>
