--- a/pages/services.html
+++ b/pages/services.html
@@ -14,11 +14,29 @@
 		<nav>
 			<a href="../index.html"><img class="logo animated fadeIn" src="../img/it-logo.png"></a>
 			<ul class="animated fadeIn">
-				<li><a href="../index.html">HOME</a></li>
-				<li><a href="./about.html">ABOUT</a></li>
-				<li><a href="#">SERVICES</a></li>
-				<li><a href="./graduate.html">NEW GRADUATE PROGRAM</a></li>
-				<li><a href="">CONTACT US</a></li>
+				<li>
+					<a href="../index.html">HOME</a>
+				</li>
+				<li>
+					<a href="./about.html">ABOUT</a>
+				</li>
+				<li class="dropdown">
+    				<a href="#.html">SERVICES</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="./staffing.html">STAFFING</a>
+				      <a href="./career.html">CAREER</a>
+				    </div>
+				</li>  
+				<li>
+					<a href="./graduate.html">NEW GRADUATE PROGRAM</a>
+				</li>
+				<li class="dropdown">
+    				<a href="./contact.html">CONTACT US</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="./staffing-contact.html">STAFFING CONTACT</a>
+				      <a href="./career-contact.html">CAREER CONTACT</a>
+				    </div>
+				</li>  
 			</ul>
 		</nav>
 
@@ -39,19 +57,20 @@
 					<img src="../img/arrows-to-people-icon.png" alt="Arrows pointing towards people">
 					<h2>Staffing</h2>
 					<p>We will save your facility thousands of dollars every year by eliminating recruitment fees from your budget.</p>
-					<button class="btnA">More Info</button>	
+					<a href="./staffing.html" class="btn btnA">More Info</a>
 				</div>
+
 				<div class="optionsDetails">
 					<img src="../img/permanent-job-icon.png" alt="Guy head with building in background">
-					<h2>Placement</h2>
+					<h2>Career</h2>
 					<p>We take note of our therapist's expectations to place them in nurturing and appropriate settings.</p>	
-					<button class="btnB">More Info</button>	
+					<a href="./career.html" class="btn btnB">More Info</a>	
 				</div>
 				<div class="optionsDetails">
 					<img src="../img/student-male-icon.png">
 					<h2>New Graduate Program</h2>
 					<p>Gain experience at an accelerated rate with various travel positions while receiving top compensation.</p>	
-					<button class="btnC">More Info</button>	
+					<a href="./graduate.html" class="btn btnC">More Info</a>	
 				</div>
 			</div>
 			
