--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
 		<meta charset="utf-8">
 		<title>Infinite Therapist</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/ionicons.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+
 		
 	</head>
 	<body>
 		<!-- Nav Bar Section -->
 		<nav>
 			<a href=""><img class="logo animated fadeIn" src="img/it-logo.png"></a>
-			<ul class="animated fadeIn">
+
+
+			<a class="hamburger js-hamburger"><i class="ion-navicon-round"></i></a> 
+
+			<ul class="animated fadeIn main-nav js-main-nav">
 				<li><a href="#">HOME</a></li>
 				<li><a href="pages/about.html">ABOUT</a></li>
-				<li><a href="pages/services.html">SERVICES</a></li>
-				<li><a href="">NEW GRADUATE PROGRAM</a></li>
-				<li><a href="">CONTACT US</a></li>
+				<li class="dropdown">
+    				<a href="pages/services.html">SERVICES</a>
+				    <div class="dropdown-content animated fadeIn">
+				      <a href="pages/staffing.html">STAFFING</a>
+				      <a href="pages/career.html">CAREER</a>
+				    </div>
+				</li>   
+				<li><a href="pages/graduate.html">NEW GRADUATE PROGRAM</a></li>
+				<li class="dropdown">
+    				<a href="pages/contact.html">CONTACT US</a>
+				    <div class="dropdown-content dropdown-content-contact animated fadeIn">
+				      <a href="pages/staffing-contact.html">STAFFING CONTACT</a>
+				      <a href="pages/career-contact.html">CAREER CONTACT</a>
+				    </div>
+				</li> 
 			</ul>
 		</nav>
 
@@ -25,10 +43,10 @@
 		<header>
 			<div class="overlay">
 				<h1 class="head">Infinite Therapist</h1>
-				<h3>Creating continuity that meets employer's and therapist's needs.</h3>
+				<h3>Therapist owned company creating continuity to meet employer's and therapist's needs.</h3>
 				<div>
-					<button class="leftButton">Need Staff?</button>
-					<button class="rightButton">Need a Career?</button>
+					<a href="pages/staffing.html" class="leftButton">Need Staff?</a>
+					<a href="pages/career.html" class="rightButton">Need a Career?</a>
 				</div>
 			</div>	
 		</header>
@@ -39,9 +57,9 @@
 				<div class="info">
 					<img src="img/group-icon.png">
 						<div>
-							<h3>
+							<h2>
 								Personalize Service
-							</h3>
+							</h2>
 							<h4 class="subInfoA">
 								Providing personalized service to each healthcare facility by exploring your needs and the culture of your team.
 							</h4>
@@ -51,9 +69,9 @@
 					<div class="info">
 						<img src="img/time-icon.png">
 						<div>
-							<h3>
+							<h2>
 								Uninterrupted Care
-							</h3> 
+							</h2> 
 							<h4 class="subInfoB">
 								Working tirelessly filling vacancies to keep facilities staffed and maintain uninterrupted care for patients.
 							</h4>
@@ -62,9 +80,9 @@
 					<div class="info">
 						<img src="img/floating-guru-icon.png">
 						<div>
-							<h3>
+							<h2>
 								Obtain Balanced Goals
-							</h3> 
+							</h2> 
 							<h4 class="subInfoC">
 								Partnership with therapists to help them obtain their career goals and support them with work life balance!
 							</h4>
@@ -87,9 +105,7 @@
 						Learn more about Infinite Therapist and our values.
 					</h3>
 				</div>
-				<button class="contactBtn">
-					About Us
-				</button>
+				<a href="pages/about.html" class="contactBtn">About Us</a>
 			</div>	
 		</section>
 		<footer>
