--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- Contact Section -->
+		<!-- CTA Section -->
 		<section class="contact">
 			<div class="wrapper">
 				<div class="mailImage">
